--- a/ZuulServer.properties
+++ b/ZuulServer.properties
@@ -7,5 +7,5 @@ zuul.routes.demo1.path=/demo1/**
 zuul.routes.demo1.service-id=DEMO1MS
 #zuul.routes.demo1.strip-prefix=false
 
-spring.main.web-application-type=reactive
+#spring.main.web-application-type=reactive
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
